--- a/layout.css
+++ b/layout.css
@@ -5,7 +5,7 @@
 
 header {
     position: relative;
-    background-image: url(../Barbearia/_imagens/2.jpeg);
+    background-image: url = "../social/_imagens/2.jpeg";
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
